src/index.css
@import "tailwindcss";
@theme {
  --color-primary: #3b82f6;
}

:root {
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  background-color: #ffffff;
  color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

* {
  transition: all 0.25s;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

button {
  border-radius: 50px;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  cursor: pointer;
  transition: border-color 0.25s;
}
button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}
input, select {
  background-color: white;
  color: #242424;
}
table tr td {
  border: solid var(--color-gray-100) 5px;
  padding: 10px;
  box-shadow: 0 0 0 3px var(--color-gray-100);
}
.matrix-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 20px;
}
.workspace {
  padding: 40vh 40vw;
  width: fit-content;
  min-height: 100vh;
  background-color: var(--color-gray-100);
}
@media (prefers-color-scheme: light) {
  :root {
    color: #ffffff;
    background-color: #213547;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #f9f9f9;
  }
}

